1.5b4 (unreleased)

 - Add hooks for configuring form unload protection and auto-focus, and disable
   them for embedded forms by default. (David Glick)

 - Fixed issue where submission of an embedded PFG form could cause processing
   of a standalone PFG form later in the page. (David Glick)

 - Fixed issue with embedded forms where the form would get processed again
   after a Retry if the form was also embedded on the thank you page. (David
   Glick)

 - Patched plone.app.portlets to not catch the Retry exception, which was
   causing problems when submitting forms embedded in portlets. (David Glick)

1.5b3

 - Fixed the link spam validator for text fields, which wasn't working
   properly.  (David Glick)

 - Fixed check for CSRF protection support, so that PFG doesn't break on
   Plone 3.0 if PloneHotfixCVE20080164 isn't installed. (David Glick)

 - Creating a new data saver could under obscure circumstances cause an
   exception "AttributeError: SavedFormInput" in some old compatibility code.
   Removed the offending code. (Steve McMahon)

 - Add some protection against trying to save old, unusable content types
   back to kupu's linkable's resource. (Steve McMahon)

 - guess_content_type, used in htmlValue in the file field, needs the same
   import protection used in the save data adapter, or it will fail in 
   later Zopes. (Thanks, Tom Gross)

1.5b2

 - Support for export/import of PloneFormGen form folders via generic setup
   profiles and the portal_setup tool as well as contextual form (i.e. on an 
   individual form basis) export/import. Feature aimed at improving the 
   development capabilities of PloneFormGen and simplifying the lives of 
   integrators. Feature considered experimental.  Use with care and test 
   thoroughly. (Andrew Burkhalter)

 - Make sure server-side only fields can supply a value via the default override.
   (David Glick)

 - Don't break old forms that are missing some of the new fields. (David Glick)
